# aquid

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  clean.zsh  run.zsh
.claude/: settings.json
.claude/agents/: implementer.md  physics-reviewer.md  test-writer.md
.claude/hooks/: pre-commit-gate.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: constants.rs  fft.rs  k_space.rs  lib.rs  main.rs  potential.rs  projector.rs  rk4.rs  types.rs  utils.rs
src/debug/: energy_interaction.txt  energy_kinetic.txt  energy_potential.txt  gpe_before_ke.txt  phase_noise.txt  wiener_noise.txt
